Update button styles in navigation links

--- a/index.html
+++ b/index.html
@@ -1258,8 +1258,8 @@
           <a href="pages/como-funciona.html">Como Funciona</a>
           <a href="pages/portal.html">Portais</a>
           <div class="nav-actions">
-            <a href="pages/login.html" class="btn btn-outline">Entrar</a>
-            <a href="pages/cadastro.html" class="btn btn-primary">Criar Conta</a>
+            <a href="pages/login.html" class="btn btn-outline" style="color: #000">Entrar</a>
+            <a href="pages/cadastro.html" class="btn btn-primary" style="color: #fff">Criar Conta</a>
           </div>
         </nav>
       </div>
