--- a/pages/ofertas.html
+++ b/pages/ofertas.html
@@ -4,20 +4,25 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ofertas - CrowdInvest</title>
-  <meta http-equiv="refresh" content="0;url=investidor/ofertas.html">
+  <meta http-equiv="refresh" content="0;url=login.html">
   <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
   <div class="auth-page">
     <div class="auth-box text-center">
       <div class="auth-logo">
-        <a href="../index.html" class="logo">CrowdInvest</a>
+        <a href="../index.html" class="logo">Alba Invest</a>
       </div>
-      <p class="text-muted">Redirecionando para ofertas...</p>
+      <p class="text-muted">Para ver as ofertas, faça login...</p>
       <p style="margin-top: 15px;">
-        Se nao for redirecionado automaticamente, <a href="investidor/ofertas.html" style="color: var(--primary);">clique aqui</a>.
+        Se não for redirecionado automaticamente, <a href="login.html" style="color: var(--primary);">clique aqui</a>.
       </p>
     </div>
   </div>
+  <a href="https://wa.me/5511738090855" target="_blank" class="floating-help-btn whatsapp" title="Atendimento WhatsApp">
+    <i class="bi bi-whatsapp"></i>
+    <span>Atendimento</span>
+  </a>
+
 </body>
 </html>
