--- a/pages/2fa-codigo-parceiro.html
+++ b/pages/2fa-codigo-parceiro.html
@@ -3,21 +3,21 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Codigo 2FA - Parceiro - CrowdInvest</title>
+  <title>Digite o Codigo - CrowdInvest</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="../css/style.css">
 </head>
 <body class="theme-parceiro">
   <div class="auth-page" style="background: linear-gradient(135deg, #059669, #047857);">
     <div class="auth-box">
       <div class="auth-logo">
-        <a href="../index.html" class="logo">CrowdInvest</a>
-        <p class="text-muted" style="margin-top: 5px;">Portal do Parceiro</p>
+        <a href="../index.html" class="logo">Alba Invest</a>
       </div>
-      <h1 class="auth-title">Digite o Codigo</h1>
-      <p class="auth-subtitle">Enviamos um codigo de 6 digitos para seu e-mail</p>
+      <h1 class="auth-title">Digite o Código</h1>
+      <p class="auth-subtitle">Enviamos um código de 6 digitos para seu e-mail</p>
 
-      <div class="alert alert-success">
-        Codigo enviado para <strong>c***@techstart.com.br</strong>
+      <div class="alert alert-success alert-centered">
+        Código enviado para <strong>c***@techstart.com.br</strong>
       </div>
 
       <form id="otpForm" onsubmit="return submitForm('otpForm', 'parceiro/dashboard.html')">
@@ -34,15 +34,21 @@
       </form>
 
       <div class="text-center mt-20">
-        <p class="text-muted">Nao recebeu o codigo?</p>
+        <p class="text-muted">Não recebeu o código?</p>
         <p>
-          <a href="#" style="color: var(--primary);" onclick="showModal('modalReenviar')">Reenviar codigo</a>
-          <span class="text-muted"> (aguarde <span id="countdown">2:00</span>)</span>
+          <a href="#" style="color: var(--primary);" onclick="showModal('modalReenviar')">Reenviar código</a>
+          <span class="text-muted"> (águarde <span id="countdown">2:00</span>)</span>
         </p>
       </div>
 
       <div class="text-center mt-20">
         <a href="2fa-escolher-parceiro.html" style="color: var(--text-muted);">&larr; Escolher outro metodo</a>
+      </div>
+
+      <!-- CVM Disclaimer -->
+      <div class="auth-disclaimer">
+        <p><i class="bi bi-shield-check"></i> Plataforma autorizada CVM - RCVM 88/2022</p>
+        <p class="text-muted" style="font-size: 0.7rem;">Investimentos envolvem riscos. Leia o material da oferta antes de investir.</p>
       </div>
     </div>
   </div>
@@ -51,11 +57,11 @@
   <div id="modalReenviar" class="modal-overlay" style="display: none;">
     <div class="modal">
       <div class="modal-header">
-        <h3>Codigo Reenviado</h3>
+        <h3>Código Reenviado</h3>
         <button class="modal-close" onclick="closeModal('modalReenviar')">&times;</button>
       </div>
       <div class="modal-body">
-        <p>Codigo reenviado!</p>
+        <p>Código reenviado!</p>
       </div>
       <div class="modal-footer">
         <button class="btn btn-primary" onclick="closeModal('modalReenviar')">OK</button>
@@ -67,5 +73,10 @@
   <script>
     startCountdown('countdown', 120);
   </script>
+  <a href="https://wa.me/5511738090855" target="_blank" class="floating-help-btn whatsapp" title="Atendimento WhatsApp">
+    <i class="bi bi-whatsapp"></i>
+    <span>Atendimento</span>
+  </a>
+
 </body>
 </html>
