--- a/pages/2fa-config.html
+++ b/pages/2fa-config.html
@@ -3,46 +3,58 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Configurar 2FA - CrowdInvest</title>
+  <title>Configurar Seguranca - CrowdInvest</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
   <div class="auth-page">
     <div class="auth-box" style="max-width: 500px;">
       <div class="auth-logo">
-        <a href="../index.html" class="logo">CrowdInvest</a>
+        <a href="../index.html" class="logo">Alba Invest</a>
       </div>
-      <h1 class="auth-title">Configurar 2FA</h1>
-      <p class="auth-subtitle">Escolha seu metodo preferido de verificacao</p>
+      <h1 class="auth-title">Configurar Seguranca</h1>
+      <p class="auth-subtitle">Escolha seu metodo preferido de verificação</p>
 
       <!-- Steps -->
       <div class="steps">
         <div class="step completed">
-          <div class="step-number"></div>
-          <div class="step-label">Cadastro</div>
+          <div class="step-number"><i class="bi bi-check"></i></div>
+          <div class="step-label">Dados</div>
         </div>
         <div class="step completed">
-          <div class="step-number"></div>
-          <div class="step-label">Relacionamento</div>
+          <div class="step-number"><i class="bi bi-check"></i></div>
+          <div class="step-label">Endereco</div>
+        </div>
+        <div class="step completed">
+          <div class="step-number"><i class="bi bi-check"></i></div>
+          <div class="step-label">Perfil</div>
         </div>
         <div class="step active">
-          <div class="step-number">3</div>
-          <div class="step-label">Segurança</div>
+          <div class="step-number">4</div>
+          <div class="step-label">Seguranca</div>
+        </div>
+        <div class="step">
+          <div class="step-number">5</div>
+          <div class="step-label">Validacao</div>
         </div>
       </div>
 
       <div class="alert alert-info">
-        <strong>Obrigatorio</strong><br>
-        A verificacao em duas etapas e obrigatoria para proteger seus investimentos.
+        <i class="bi bi-shield-lock"></i>
+        <div>
+          <strong>Escolha seu metodo preferido</strong><br>
+          A verificacao em duas etapas protege seus investimentos. Voce pode alterar essa opcao a qualquer momento.
+        </div>
       </div>
 
-      <form id="configForm" onsubmit="return submitForm('configForm', 'cadastro-sucesso.html')">
-        <p class="text-muted mb-20">Selecione como deseja receber os codigos de verificacao:</p>
+      <form id="configForm" onsubmit="return submitForm('configForm', 'kyc-validacao.html')">
+        <p class="text-muted mb-20">Selecione como deseja receber os códigos de verificação:</p>
 
         <div class="method-options">
           <label class="method-option selected" onclick="selectMethod(this)">
             <input type="radio" name="method" value="email" checked>
-            <span class="method-icon">&#9993;</span>
+            <span class="method-icon"><i class="bi bi-envelope"></i></span>
             <div class="method-info">
               <h4>E-mail</h4>
               <p>joao.silva@email.com</p>
@@ -51,7 +63,7 @@
 
           <label class="method-option" onclick="selectMethod(this)">
             <input type="radio" name="method" value="sms">
-            <span class="method-icon">&#128241;</span>
+            <span class="method-icon"><i class="bi bi-phone"></i></span>
             <div class="method-info">
               <h4>SMS</h4>
               <p>(11) 99999-8888</p>
@@ -60,7 +72,7 @@
 
           <label class="method-option" onclick="selectMethod(this)">
             <input type="radio" name="method" value="whatsapp">
-            <span class="method-icon">&#128172;</span>
+            <span class="method-icon"><i class="bi bi-whatsapp"></i></span>
             <div class="method-info">
               <h4>WhatsApp</h4>
               <p>(11) 99999-8888</p>
@@ -68,24 +80,28 @@
           </label>
         </div>
 
-        <div class="form-group">
-          <label style="display: flex; align-items: center; gap: 10px;">
-            <input type="checkbox" checked>
-            <span class="text-muted">Solicitar 2FA em todos os logins</span>
-          </label>
-        </div>
-
-        <button type="submit" class="btn btn-primary btn-block btn-lg">Finalizar Cadastro</button>
+        <button type="submit" class="btn btn-primary btn-block btn-lg">Continuar</button>
       </form>
 
       <div class="text-center mt-20">
         <p class="text-muted" style="font-size: 0.875rem;">
-          Voce podera alterar o metodo de 2FA a qualquer momento nas configuracoes da sua conta.
+          Voce podera alterar o metodo de verificacao a qualquer momento nas configuracoes da sua conta.
         </p>
+      </div>
+
+      <!-- CVM Disclaimer -->
+      <div class="auth-disclaimer">
+        <p><i class="bi bi-shield-check"></i> Plataforma autorizada CVM - RCVM 88/2022</p>
+        <p class="text-muted" style="font-size: 0.7rem;">Investimentos envolvem riscos. Leia o material da oferta antes de investir.</p>
       </div>
     </div>
   </div>
 
   <script src="../js/app.js"></script>
+  <a href="https://wa.me/5511738090855" target="_blank" class="floating-help-btn whatsapp" title="Atendimento WhatsApp">
+    <i class="bi bi-whatsapp"></i>
+    <span>Atendimento</span>
+  </a>
+
 </body>
 </html>
