--- a/pages/admin-setup-totp-backup.html
+++ b/pages/admin-setup-totp-backup.html
@@ -3,18 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Codigos de Backup - Admin - CrowdInvest</title>
+  <title>Codigos de Recuperacao - CrowdInvest</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="../css/style.css">
 </head>
 <body class="theme-admin">
   <div class="auth-page" style="background: linear-gradient(135deg, #1e293b, #334155);">
     <div class="auth-box" style="max-width: 500px;">
       <div class="auth-logo">
-        <a href="../index.html" class="logo">CrowdInvest</a>
-        <p class="text-muted" style="margin-top: 5px;">Configuracao Inicial - Admin</p>
+        <a href="../index.html" class="logo">Alba Invest</a>
       </div>
-      <h1 class="auth-title">Codigos de Recuperacao</h1>
-      <p class="auth-subtitle">Guarde estes codigos em um local seguro</p>
+      <h1 class="auth-title">Códigos de Recuperação</h1>
+      <p class="auth-subtitle">Guarde estes códigos em um local seguro</p>
 
       <!-- Steps -->
       <div class="steps" style="margin-bottom: 30px;">
@@ -33,8 +33,11 @@
       </div>
 
       <div class="alert alert-warning">
-        <strong>&#9888; Importante!</strong><br>
-        Estes codigos sao a unica forma de acessar sua conta caso perca o acesso ao Authenticator. Cada codigo so pode ser usado uma vez.
+        <i class="bi bi-exclamation-triangle"></i>
+        <div>
+          <strong>Importante!</strong><br>
+          Estes códigos são a unica forma de acessar sua conta caso perca o acesso ao Authenticator. Cada código so pode ser usado uma vez.
+        </div>
       </div>
 
       <!-- Backup Codes -->
@@ -52,21 +55,27 @@
       </div>
 
       <div class="flex gap-10 mb-20">
-        <button class="btn btn-outline" style="flex: 1;" onclick="showModal('modalCopiado')">&#128203; Copiar</button>
-        <button class="btn btn-outline" style="flex: 1;" onclick="showModal('modalDownload')">&#128229; Baixar PDF</button>
+        <button class="btn btn-outline" style="flex: 1;" onclick="showModal('modalCopiado')"><i class="bi bi-clipboard"></i> Copiar</button>
+        <button class="btn btn-outline" style="flex: 1;" onclick="showModal('modalDownload')"><i class="bi bi-download"></i> Baixar PDF</button>
       </div>
 
       <div class="form-group">
         <label style="display: flex; align-items: flex-start; gap: 10px;">
           <input type="checkbox" style="margin-top: 4px;" id="confirmBackup" required>
-          <span style="font-size: 0.875rem;">Confirmo que salvei os codigos de recuperacao em um local seguro</span>
+          <span style="font-size: 0.875rem;">Confirmo que salvei os códigos de recuperação em um local seguro</span>
         </label>
       </div>
 
-      <button class="btn btn-primary btn-block btn-lg" onclick="window.location.href='admin/dashboard.html'">Concluir Configuracao</button>
+      <button class="btn btn-primary btn-block btn-lg" onclick="window.location.href='admin/dashboard.html'">Concluir Configuração</button>
 
       <div class="alert alert-info mt-20" style="font-size: 0.875rem;">
-        <strong>Dica:</strong> Imprima estes codigos e guarde em local fisico seguro, ou salve em um gerenciador de senhas.
+        <strong>Dica:</strong> Imprima estes códigos e guarde em local fisico seguro, ou salve em um gerenciador de senhas.
+      </div>
+
+      <!-- CVM Disclaimer -->
+      <div class="auth-disclaimer">
+        <p><i class="bi bi-shield-check"></i> Plataforma autorizada CVM - RCVM 88/2022</p>
+        <p class="text-muted" style="font-size: 0.7rem;">Investimentos envolvem riscos. Leia o material da oferta antes de investir.</p>
       </div>
     </div>
   </div>
@@ -75,11 +84,11 @@
   <div id="modalCopiado" class="modal-overlay" style="display: none;">
     <div class="modal">
       <div class="modal-header">
-        <h3>Codigos Copiados</h3>
+        <h3>Códigos Copiados</h3>
         <button class="modal-close" onclick="closeModal('modalCopiado')">&times;</button>
       </div>
       <div class="modal-body">
-        <p>Codigos copiados!</p>
+        <p>Códigos copiados!</p>
       </div>
       <div class="modal-footer">
         <button class="btn btn-primary" onclick="closeModal('modalCopiado')">OK</button>
@@ -104,5 +113,6 @@
   </div>
 
   <script src="../js/app.js"></script>
+
 </body>
 </html>
