--- a/pages/admin-setup-totp-verify.html
+++ b/pages/admin-setup-totp-verify.html
@@ -3,18 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Verificar TOTP - Admin - CrowdInvest</title>
+  <title>Verificar Configuracao - CrowdInvest</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="../css/style.css">
 </head>
 <body class="theme-admin">
   <div class="auth-page" style="background: linear-gradient(135deg, #1e293b, #334155);">
     <div class="auth-box" style="max-width: 500px;">
       <div class="auth-logo">
-        <a href="../index.html" class="logo">CrowdInvest</a>
-        <p class="text-muted" style="margin-top: 5px;">Configuracao Inicial - Admin</p>
+        <a href="../index.html" class="logo">Alba Invest</a>
       </div>
-      <h1 class="auth-title">Verificar Configuracao</h1>
-      <p class="auth-subtitle">Digite o codigo do seu Authenticator para confirmar</p>
+      <h1 class="auth-title">Verificar Configuração</h1>
+      <p class="auth-subtitle">Digite o código do seu Authenticator para confirmar</p>
 
       <!-- Steps -->
       <div class="steps" style="margin-bottom: 30px;">
@@ -33,7 +33,11 @@
       </div>
 
       <div class="alert alert-info">
-        <strong>Passo 2:</strong> Digite o codigo de 6 digitos que aparece no seu app
+        <i class="bi bi-info-circle"></i>
+        <div>
+          <strong>Passo 2:</strong><br>
+          Digite o código de 6 digitos que aparece no seu app
+        </div>
       </div>
 
       <form id="verifyForm" onsubmit="return submitForm('verifyForm', 'admin-setup-totp-backup.html')">
@@ -47,7 +51,7 @@
         </div>
 
         <p class="text-center text-muted mb-20" style="font-size: 0.875rem;">
-          O codigo muda a cada 30 segundos
+          O código muda a cada 30 segundos
         </p>
 
         <button type="submit" class="btn btn-primary btn-block btn-lg">Verificar e Continuar</button>
@@ -56,9 +60,16 @@
       <div class="text-center mt-20">
         <a href="admin-setup-totp.html" style="color: var(--text-muted);">&larr; Voltar ao QR Code</a>
       </div>
+
+      <!-- CVM Disclaimer -->
+      <div class="auth-disclaimer">
+        <p><i class="bi bi-shield-check"></i> Plataforma autorizada CVM - RCVM 88/2022</p>
+        <p class="text-muted" style="font-size: 0.7rem;">Investimentos envolvem riscos. Leia o material da oferta antes de investir.</p>
+      </div>
     </div>
   </div>
 
   <script src="../js/app.js"></script>
+
 </body>
 </html>
