--- a/pages/cadastro-sucesso.html
+++ b/pages/cadastro-sucesso.html
@@ -3,33 +3,38 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Cadastro Concluido - CrowdInvest</title>
+  <title>Cadastro Concluído - CrowdInvest</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
   <div class="auth-page">
     <div class="auth-box" style="max-width: 500px;">
       <div class="auth-logo">
-        <a href="../index.html" class="logo">CrowdInvest</a>
+        <a href="../index.html" class="logo">Alba Invest</a>
       </div>
 
       <div class="text-center" style="padding: 40px 0;">
-        <div style="font-size: 5rem; margin-bottom: 20px; color: var(--success);">&#127881;</div>
-        <h1>Cadastro Concluido!</h1>
+        <div style="font-size: 5rem; margin-bottom: 20px; color: var(--success);"><i class="bi bi-patch-check-fill"></i></div>
+        <h1>Cadastro Concluído!</h1>
         <p class="text-muted mt-20" style="font-size: 1.1rem;">
-          Sua conta foi criada com sucesso. Voce ja pode comecar a investir em startups brasileiras.
+          Sua conta foi criada com sucesso. Você já pode começar a investir em startups brasileiras.
         </p>
 
         <div class="card mt-20" style="text-align: left;">
           <h4 style="margin-bottom: 15px;">Resumo da Conta</h4>
           <p><strong>Nome:</strong> Joao Carlos Silva</p>
           <p><strong>E-mail:</strong> joao.silva@email.com</p>
-          <p><strong>2FA:</strong> E-mail ativado</p>
+          <p><strong>Verificacao:</strong> E-mail ativado</p>
           <p><strong>Limite anual:</strong> R$ 20.000,00</p>
         </div>
 
         <div class="alert alert-info mt-20">
-          <strong>Proximo passo:</strong> Explore as ofertas disponiveis e faca seu primeiro investimento!
+          <i class="bi bi-info-circle"></i>
+          <div>
+            <strong>Próximo passo:</strong><br>
+            Explore as ofertas disponíveis e faca seu primeiro investimento!
+          </div>
         </div>
 
         <div class="flex gap-10 mt-20" style="justify-content: center;">
@@ -37,9 +42,20 @@
           <a href="investidor/dashboard.html" class="btn btn-outline btn-lg">Minha Conta</a>
         </div>
       </div>
+
+      <!-- CVM Disclaimer -->
+      <div class="auth-disclaimer">
+        <p><i class="bi bi-shield-check"></i> Plataforma autorizada CVM - RCVM 88/2022</p>
+        <p class="text-muted" style="font-size: 0.7rem;">Investimentos envolvem riscos. Leia o material da oferta antes de investir.</p>
+      </div>
     </div>
   </div>
 
   <script src="../js/app.js"></script>
+  <a href="https://wa.me/5511738090855" target="_blank" class="floating-help-btn whatsapp" title="Atendimento WhatsApp">
+    <i class="bi bi-whatsapp"></i>
+    <span>Atendimento</span>
+  </a>
+
 </body>
 </html>
