--- a/pages/cadastro.html
+++ b/pages/cadastro.html
@@ -4,34 +4,50 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cadastro - CrowdInvest</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
+  <!-- Announcement Bar -->
+  <div class="announcement-bar">
+    <i class="bi bi-megaphone-fill"></i>
+    Nova oferta disponível: TechStart Inovação - 78% captado!
+    <a href="login.html">Investir agora</a>
+  </div>
+
   <div class="auth-page">
     <div class="auth-box" style="max-width: 500px;">
       <div class="auth-logo">
-        <a href="../index.html" class="logo">CrowdInvest</a>
+        <a href="../index.html" class="logo">Alba Invest</a>
       </div>
       <h1 class="auth-title">Criar Conta</h1>
-      <p class="auth-subtitle">Cadastre-se para comecar a investir</p>
+      <p class="auth-subtitle">Cadastre-se para começar a investir</p>
 
       <!-- Steps -->
       <div class="steps">
         <div class="step active">
           <div class="step-number">1</div>
-          <div class="step-label">Cadastro</div>
+          <div class="step-label">Dados</div>
         </div>
         <div class="step">
           <div class="step-number">2</div>
-          <div class="step-label">Relacionamento</div>
+          <div class="step-label">Endereço</div>
         </div>
         <div class="step">
           <div class="step-number">3</div>
+          <div class="step-label">Perfil</div>
+        </div>
+        <div class="step">
+          <div class="step-number">4</div>
           <div class="step-label">Segurança</div>
+        </div>
+        <div class="step">
+          <div class="step-number">5</div>
+          <div class="step-label">Validação</div>
         </div>
       </div>
 
-      <form id="cadastroForm" onsubmit="return submitForm('cadastroForm', 'kyc-validacao.html')">
+      <form id="cadastroForm" onsubmit="return submitForm('cadastroForm', 'cadastro-endereco.html')">
         <div class="form-group">
           <label class="form-label">Nome Completo</label>
           <input type="text" class="form-input" placeholder="Seu nome completo" value="Joao Carlos Silva" required>
@@ -59,8 +75,8 @@
 
         <div class="form-group">
           <label class="form-label">Senha</label>
-          <input type="password" class="form-input" placeholder="Minimo 8 caracteres" value="12345678" required>
-          <p class="form-hint">Minimo 8 caracteres, com letras e numeros</p>
+          <input type="password" class="form-input" placeholder="Mínimo 8 caracteres" value="12345678" required>
+          <p class="form-hint">Mínimo 8 caracteres, com letras e números</p>
         </div>
 
         <div class="form-group">
@@ -72,7 +88,7 @@
           <label style="display: flex; align-items: flex-start; gap: 10px;">
             <input type="checkbox" style="margin-top: 4px;" checked required>
             <span class="text-muted" style="font-size: 0.875rem;">
-              Li e concordo com os <a href="#" style="color: var(--primary);">Termos de Uso</a> e a <a href="#" style="color: var(--primary);">Politica de Privacidade</a>
+              Li e concordo com os <a href="#" style="color: var(--primary);">Termos de Uso</a> e a <a href="#" style="color: var(--primary);">Política de Privacidade</a>
             </span>
           </label>
         </div>
@@ -81,11 +97,22 @@
       </form>
 
       <div class="text-center mt-20">
-        <p class="text-muted">Ja tem conta? <a href="login.html" style="color: var(--primary);">Entrar</a></p>
+        <p class="text-muted">Já tem conta? <a href="login.html" style="color: var(--primary);">Entrar</a></p>
+      </div>
+
+      <!-- CVM Disclaimer -->
+      <div class="auth-disclaimer">
+        <p><i class="bi bi-shield-check"></i> Plataforma autorizada CVM - RCVM 88/2022</p>
+        <p class="text-muted" style="font-size: 0.7rem;">Investimentos envolvem riscos. Leia o material da oferta antes de investir.</p>
       </div>
     </div>
   </div>
 
   <script src="../js/app.js"></script>
+  <a href="https://wa.me/5511738090855" target="_blank" class="floating-help-btn whatsapp" title="Atendimento WhatsApp">
+    <i class="bi bi-whatsapp"></i>
+    <span>Atendimento</span>
+  </a>
+
 </body>
 </html>
