--- a/pages/kyc-validacao.html
+++ b/pages/kyc-validacao.html
@@ -3,39 +3,48 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Validacao KYC - CrowdInvest</title>
+  <title>Validação KYC - CrowdInvest</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
   <div class="auth-page">
     <div class="auth-box" style="max-width: 500px;">
       <div class="auth-logo">
-        <a href="../index.html" class="logo">CrowdInvest</a>
+        <a href="../index.html" class="logo">Alba Invest</a>
       </div>
-      <h1 class="auth-title">Validacao de Identidade</h1>
-      <p class="auth-subtitle">Validacao automatica via Bureau de Dados</p>
+      <h1 class="auth-title">Validação de Identidade</h1>
+      <p class="auth-subtitle">Verificacao rapida e segura dos seus dados</p>
 
       <!-- Steps -->
       <div class="steps">
         <div class="step completed">
-          <div class="step-number"></div>
-          <div class="step-label">Cadastro</div>
+          <div class="step-number"><i class="bi bi-check"></i></div>
+          <div class="step-label">Dados</div>
+        </div>
+        <div class="step completed">
+          <div class="step-number"><i class="bi bi-check"></i></div>
+          <div class="step-label">Endereco</div>
+        </div>
+        <div class="step completed">
+          <div class="step-number"><i class="bi bi-check"></i></div>
+          <div class="step-label">Perfil</div>
+        </div>
+        <div class="step completed">
+          <div class="step-number"><i class="bi bi-check"></i></div>
+          <div class="step-label">Seguranca</div>
         </div>
         <div class="step active">
-          <div class="step-number">2</div>
-          <div class="step-label">Relacionamento</div>
-        </div>
-        <div class="step">
-          <div class="step-number">3</div>
-          <div class="step-label">Segurança</div>
+          <div class="step-number">5</div>
+          <div class="step-label">Validacao</div>
         </div>
       </div>
 
       <div class="card" id="validatingCard">
         <div class="text-center" style="padding: 40px 0;">
-          <div style="font-size: 4rem; margin-bottom: 20px; animation: pulse 1.5s infinite;">&#128269;</div>
+          <div style="font-size: 4rem; margin-bottom: 20px; animation: pulse 1.5s infinite; color: var(--primary);"><i class="bi bi-person-badge"></i></div>
           <h3>Validando seus dados...</h3>
-          <p class="text-muted mt-20">Estamos consultando o Bureau de Dados para validar sua identidade. Isso leva apenas alguns segundos.</p>
+          <p class="text-muted mt-20">Estamos verificando suas informacoes. Isso leva apenas alguns segundos.</p>
           <div class="progress mt-20" style="max-width: 300px; margin: 20px auto;">
             <div class="progress-bar" id="progressBar" style="width: 0%; transition: width 3s;"></div>
           </div>
@@ -46,37 +55,37 @@
         <div class="text-center" style="padding: 40px 0;">
           <div style="font-size: 4rem; margin-bottom: 20px; color: var(--success);">&#10004;</div>
           <h3>Identidade Validada!</h3>
-          <p class="text-muted mt-20">Seus dados foram verificados com sucesso via Bureau de Dados.</p>
+          <p class="text-muted mt-20">Seus dados foram verificados com sucesso.</p>
 
           <div style="background: var(--bg); border-radius: var(--radius); padding: 20px; margin: 20px 0; text-align: left;">
             <p><strong>Nome:</strong> Joao Carlos Silva</p>
             <p><strong>CPF:</strong> 123.456.789-00</p>
-            <p><strong>Situacao:</strong> <span class="badge badge-success">Regular</span></p>
-            <p><strong>PEP:</strong> <span class="badge badge-secondary">Nao</span></p>
+            <p><strong>Situação:</strong> <span class="badge badge-success">Regular</span></p>
+            <p><strong>PEP:</strong> <span class="badge badge-secondary">Não</span></p>
           </div>
 
-          <a href="2fa-config.html" class="btn btn-primary btn-lg">Configurar 2FA</a>
+          <a href="cadastro-sucesso.html" class="btn btn-primary btn-lg">Concluir Cadastro</a>
         </div>
       </div>
 
       <div class="card" id="errorCard" style="display: none;">
         <div class="text-center" style="padding: 40px 0;">
           <div style="font-size: 4rem; margin-bottom: 20px; color: var(--warning);">&#9888;</div>
-          <h3>Validacao Pendente</h3>
-          <p class="text-muted mt-20">Nao foi possivel validar automaticamente. Nossa equipe ira analisar manualmente.</p>
+          <h3>Validação Pendente</h3>
+          <p class="text-muted mt-20">Não foi possível validar automaticamente. Nossa equipe ira analisar manualmente.</p>
 
           <div class="alert alert-warning mt-20">
-            Voce recebera um e-mail em ate 24 horas com o resultado da analise.
+            Você receberá um e-mail em até 24 horas com o resultado da análise.
           </div>
 
-          <a href="../index.html" class="btn btn-secondary btn-lg">Voltar ao Inicio</a>
+          <a href="cadastro-erro.html" class="btn btn-secondary btn-lg">Ver Detalhes</a>
         </div>
       </div>
 
-      <div class="text-center mt-20">
-        <p class="text-muted" style="font-size: 0.875rem;">
-          Utilizamos Serasa, SPC e Receita Federal para validacao automatica.<br>
-          Sem necessidade de envio de documentos.
+      <div class="text-center mt-20" style="display: flex; align-items: center; justify-content: center; gap: 10px;">
+        <i class="bi bi-shield-check" style="font-size: 1.2rem; color: var(--success);"></i>
+        <p class="text-muted" style="font-size: 0.85rem; margin: 0;">
+          Validacao 100% digital, sem envio de documentos
         </p>
       </div>
     </div>
@@ -84,7 +93,7 @@
 
   <script src="../js/app.js"></script>
   <script>
-    // Simulate KYC validation
+    // Simulaté KYC validation
     setTimeout(() => {
       document.getElementById('progressBar').style.width = '100%';
     }, 100);
@@ -101,10 +110,15 @@
   </script>
 
   <style>
-    @keyframes pulse {
+    @keyframês pulse {
       0%, 100% { opacity: 1; }
       50% { opacity: 0.5; }
     }
   </style>
+  <a href="https://wa.me/5511738090855" target="_blank" class="floating-help-btn whatsapp" title="Atendimento WhatsApp">
+    <i class="bi bi-whatsapp"></i>
+    <span>Atendimento</span>
+  </a>
+
 </body>
 </html>
