--- a/pages/login.html
+++ b/pages/login.html
@@ -3,18 +3,25 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login - CrowdInvest</title>
+  <title>Login Investidor - CrowdInvest</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
+  <!-- Announcement Bar -->
+  <div class="announcement-bar">
+    <i class="bi bi-megaphone-fill"></i>
+    Nova oferta disponível: TechStart Inovação - 78% captado!
+    <a href="login.html">Investir agora</a>
+  </div>
+
   <div class="auth-page">
     <div class="auth-box">
       <div class="auth-logo">
-        <a href="../index.html" class="logo">CrowdInvest</a>
+        <a href="../index.html" class="logo">Alba Invest</a>
       </div>
-      <h1 class="auth-title">Bem-vindo de volta</h1>
-      <p class="auth-subtitle">Entre na sua conta para continuar</p>
+      <h1 class="auth-title">Login Investidor</h1>
+      <p class="auth-subtitle">Acesse sua conta para investir</p>
 
       <form id="loginForm" onsubmit="return submitForm('loginForm', '2fa-escolher.html')">
         <div class="form-group">
@@ -38,7 +45,7 @@
       </form>
 
       <div class="text-center mt-20">
-        <p class="text-muted">Nao tem conta? <a href="cadastro.html" style="color: var(--primary);">Cadastre-se</a></p>
+        <p class="text-muted">Não tem conta? <a href="cadastro.html" style="color: var(--primary);">Cadastre-se</a></p>
       </div>
 
       <div style="margin-top: 30px; padding-top: 20px; border-top: 1px solid var(--border);">
@@ -48,9 +55,20 @@
           </a>
         </p>
       </div>
+
+      <!-- CVM Disclaimer -->
+      <div class="auth-disclaimer">
+        <p><i class="bi bi-shield-check"></i> Plataforma autorizada CVM - RCVM 88/2022</p>
+        <p class="text-muted" style="font-size: 0.7rem;">Investimentos envolvem riscos. Leia o material da oferta antes de investir.</p>
+      </div>
     </div>
   </div>
 
   <script src="../js/app.js"></script>
+  <a href="https://wa.me/5511738090855" target="_blank" class="floating-help-btn whatsapp" title="Atendimento WhatsApp">
+    <i class="bi bi-whatsapp"></i>
+    <span>Atendimento</span>
+  </a>
+
 </body>
 </html>
