--- a/pages/parceiro-login.html
+++ b/pages/parceiro-login.html
@@ -11,11 +11,10 @@
   <div class="auth-page" style="background: linear-gradient(135deg, #059669, #047857);">
     <div class="auth-box">
       <div class="auth-logo">
-        <a href="../index.html" class="logo">CrowdInvest</a>
-        <p class="text-muted" style="margin-top: 5px;">Portal do Parceiro/Emissor</p>
+        <a href="../index.html" class="logo">Alba Invest</a>
       </div>
       <h1 class="auth-title">Login Parceiro</h1>
-      <p class="auth-subtitle">Acesse sua area de gestao de ofertas</p>
+      <p class="auth-subtitle">Acesse sua area de gestão de ofertas</p>
 
       <form id="parceiroLoginForm" onsubmit="return submitForm('parceiroLoginForm', '2fa-escolher-parceiro.html')">
         <div class="form-group">
@@ -38,8 +37,9 @@
         <button type="submit" class="btn btn-primary btn-block btn-lg">Entrar</button>
       </form>
 
-      <div class="text-center mt-20">
-        <p class="text-muted">Quer ser um emissor? <a href="#" style="color: var(--primary);">Fale conosco</a></p>
+      <div style="margin-top: 25px; padding-top: 25px; border-top: 1px solid var(--border);">
+        <p class="text-center" style="margin-bottom: 15px;">Ainda não tem conta?</p>
+        <a href="parceiro-cadastro-tipo.html" class="btn btn-outline btn-block">Cadastre-se</a>
       </div>
 
       <div style="margin-top: 30px; padding-top: 20px; border-top: 1px solid var(--border);">
@@ -49,9 +49,20 @@
           </a>
         </p>
       </div>
+
+      <!-- CVM Disclaimer -->
+      <div class="auth-disclaimer">
+        <p><i class="bi bi-shield-check"></i> Plataforma autorizada CVM - RCVM 88/2022</p>
+        <p class="text-muted" style="font-size: 0.7rem;">Investimentos envolvem riscos. Leia o material da oferta antes de investir.</p>
+      </div>
     </div>
   </div>
 
   <script src="../js/app.js"></script>
+  <a href="https://wa.me/5511738090855" target="_blank" class="floating-help-btn whatsapp" title="Atendimento WhatsApp">
+    <i class="bi bi-whatsapp"></i>
+    <span>Atendimento</span>
+  </a>
+
 </body>
 </html>
