--- a/pages/recuperar-senha-enviado.html
+++ b/pages/recuperar-senha-enviado.html
@@ -8,21 +8,22 @@
   <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-  <div class="auth-container">
-    <div class="auth-header">
-      <a href="../index.html" class="logo">CrowdInvest</a>
-    </div>
+  <div class="auth-page">
     <div class="auth-box">
+      <div class="auth-logo">
+        <a href="../index.html" class="logo">Alba Invest</a>
+      </div>
+
       <div class="text-center">
         <div style="width: 80px; height: 80px; background: linear-gradient(135deg, var(--success), #16a34a); border-radius: 50%; display: flex; align-items: center; justify-content: center; margin: 0 auto 20px;">
           <i class="bi bi-envelope-check" style="font-size: 2rem; color: white;"></i>
         </div>
-        <h2>E-mail Enviado!</h2>
-        <p class="text-muted" style="margin-bottom: 30px;">
+        <h1 class="auth-title">E-mail Enviado!</h1>
+        <p class="auth-subtitle">
           Enviamos um link de recuperacao para o seu e-mail. Verifique sua caixa de entrada e siga as instrucoes.
         </p>
 
-        <div class="alert alert-info" style="text-align: left;">
+        <div class="alert alert-info mt-20" style="text-align: left;">
           <strong><i class="bi bi-info-circle"></i> Importante:</strong>
           <ul style="margin: 10px 0 0 20px; font-size: 0.875rem;">
             <li>O link expira em 30 minutos</li>
@@ -44,9 +45,20 @@
           </p>
         </div>
       </div>
+
+      <!-- CVM Disclaimer -->
+      <div class="auth-disclaimer">
+        <p><i class="bi bi-shield-check"></i> Plataforma autorizada CVM - RCVM 88/2022</p>
+        <p class="text-muted" style="font-size: 0.7rem;">Investimentos envolvem riscos. Leia o material da oferta antes de investir.</p>
+      </div>
     </div>
   </div>
 
   <script src="../js/app.js"></script>
+  <a href="https://wa.me/5511738090855" target="_blank" class="floating-help-btn whatsapp" title="Atendimento WhatsApp">
+    <i class="bi bi-whatsapp"></i>
+    <span>Atendimento</span>
+  </a>
+
 </body>
 </html>
