--- a/pages/recuperar-senha-parceiro-enviado.html
+++ b/pages/recuperar-senha-parceiro-enviado.html
@@ -7,23 +7,23 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="../css/style.css">
 </head>
-<body>
-  <div class="auth-container">
-    <div class="auth-header">
-      <a href="../index.html" class="logo">CrowdInvest</a>
-      <span class="badge" style="background: #059669; color: white; margin-left: 10px;">Parceiro</span>
-    </div>
-    <div class="auth-box" style="border-top: 4px solid #059669;">
+<body class="theme-parceiro">
+  <div class="auth-page" style="background: linear-gradient(135deg, #059669, #047857);">
+    <div class="auth-box">
+      <div class="auth-logo">
+        <a href="../index.html" class="logo">Alba Invest</a>
+      </div>
+
       <div class="text-center">
         <div style="width: 80px; height: 80px; background: linear-gradient(135deg, #059669, #047857); border-radius: 50%; display: flex; align-items: center; justify-content: center; margin: 0 auto 20px;">
           <i class="bi bi-envelope-check" style="font-size: 2rem; color: white;"></i>
         </div>
-        <h2>E-mail Enviado!</h2>
-        <p class="text-muted" style="margin-bottom: 30px;">
+        <h1 class="auth-title">E-mail Enviado!</h1>
+        <p class="auth-subtitle">
           Enviamos um link de recuperacao para o e-mail corporativo cadastrado.
         </p>
 
-        <div class="alert alert-info" style="text-align: left;">
+        <div class="alert alert-info mt-20" style="text-align: left;">
           <strong><i class="bi bi-info-circle"></i> Importante:</strong>
           <ul style="margin: 10px 0 0 20px; font-size: 0.875rem;">
             <li>O link expira em 30 minutos</li>
@@ -37,7 +37,7 @@
           <strong style="font-size: 1.1rem;">c***@empresa.com</strong>
         </div>
 
-        <a href="parceiro-login.html" class="btn btn-block btn-lg" style="background: linear-gradient(135deg, #059669, #047857); color: white;">Voltar ao Login</a>
+        <a href="parceiro-login.html" class="btn btn-primary btn-block btn-lg">Voltar ao Login</a>
 
         <div class="mt-20">
           <p class="text-muted" style="font-size: 0.875rem;">
@@ -45,9 +45,20 @@
           </p>
         </div>
       </div>
+
+      <!-- CVM Disclaimer -->
+      <div class="auth-disclaimer">
+        <p><i class="bi bi-shield-check"></i> Plataforma autorizada CVM - RCVM 88/2022</p>
+        <p class="text-muted" style="font-size: 0.7rem;">Investimentos envolvem riscos. Leia o material da oferta antes de investir.</p>
+      </div>
     </div>
   </div>
 
   <script src="../js/app.js"></script>
+  <a href="https://wa.me/5511738090855" target="_blank" class="floating-help-btn whatsapp" title="Atendimento WhatsApp">
+    <i class="bi bi-whatsapp"></i>
+    <span>Atendimento</span>
+  </a>
+
 </body>
 </html>
