--- a/pages/recuperar-senha-parceiro.html
+++ b/pages/recuperar-senha-parceiro.html
@@ -3,23 +3,23 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Recuperar Senha - Parceiro - CrowdInvest</title>
+  <title>Recuperar Senha Parceiro - CrowdInvest</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="../css/style.css">
 </head>
-<body>
-  <div class="auth-container">
-    <div class="auth-header">
-      <a href="../index.html" class="logo">CrowdInvest</a>
-      <span class="badge" style="background: #059669; color: white; margin-left: 10px;">Parceiro</span>
-    </div>
-    <div class="auth-box" style="border-top: 4px solid #059669;">
+<body class="theme-parceiro">
+  <div class="auth-page" style="background: linear-gradient(135deg, #059669, #047857);">
+    <div class="auth-box">
+      <div class="auth-logo">
+        <a href="../index.html" class="logo">Alba Invest</a>
+      </div>
+
       <div class="text-center mb-30">
         <div style="width: 80px; height: 80px; background: linear-gradient(135deg, #059669, #047857); border-radius: 50%; display: flex; align-items: center; justify-content: center; margin: 0 auto 20px;">
           <i class="bi bi-key" style="font-size: 2rem; color: white;"></i>
         </div>
-        <h2>Esqueceu sua senha?</h2>
-        <p class="text-muted">Digite o e-mail corporativo cadastrado para receber o link de recuperacao.</p>
+        <h1 class="auth-title">Recuperar Senha</h1>
+        <p class="auth-subtitle">Digite o e-mail corporativo cadastrado para receber o link de recuperacao.</p>
       </div>
 
       <form action="recuperar-senha-parceiro-enviado.html" method="get">
@@ -30,10 +30,12 @@
 
         <div class="form-group">
           <label class="form-label">CNPJ da empresa</label>
-          <input type="text" class="form-input" placeholder="00.000.000/0001-00" required>
+          <input type="text" class="form-input" placeholder="43.413.213/0001-58" required>
         </div>
 
-        <button type="submit" class="btn btn-block btn-lg" style="background: linear-gradient(135deg, #059669, #047857); color: white;">Enviar Link de Recuperacao</button>
+        <button type="submit" class="btn btn-primary btn-block btn-lg">
+          <i class="bi bi-envelope"></i> Enviar Link de Recuperacao
+        </button>
       </form>
 
       <div class="text-center mt-20">
@@ -41,15 +43,26 @@
           <i class="bi bi-arrow-left"></i> Voltar ao login
         </a>
       </div>
-    </div>
 
-    <div class="text-center mt-20">
-      <p class="text-muted" style="font-size: 0.875rem;">
-        Problemas para acessar? <a href="#" style="color: #059669;">Contate o suporte</a>
-      </p>
+      <div style="margin-top: 25px; padding-top: 20px; border-top: 1px solid var(--border);">
+        <p class="text-center text-muted" style="font-size: 0.875rem;">
+          Problemas para acessar? <a href="fale-conosco.html" style="color: #059669;">Contate o suporte</a>
+        </p>
+      </div>
+
+      <!-- CVM Disclaimer -->
+      <div class="auth-disclaimer">
+        <p><i class="bi bi-shield-check"></i> Plataforma autorizada CVM - RCVM 88/2022</p>
+        <p class="text-muted" style="font-size: 0.7rem;">Investimentos envolvem riscos. Leia o material da oferta antes de investir.</p>
+      </div>
     </div>
   </div>
 
   <script src="../js/app.js"></script>
+  <a href="https://wa.me/5511738090855" target="_blank" class="floating-help-btn whatsapp" title="Atendimento WhatsApp">
+    <i class="bi bi-whatsapp"></i>
+    <span>Atendimento</span>
+  </a>
+
 </body>
 </html>
