--- a/pages/recuperar-senha.html
+++ b/pages/recuperar-senha.html
@@ -8,17 +8,18 @@
   <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-  <div class="auth-container">
-    <div class="auth-header">
-      <a href="../index.html" class="logo">CrowdInvest</a>
-    </div>
+  <div class="auth-page">
     <div class="auth-box">
+      <div class="auth-logo">
+        <a href="../index.html" class="logo">Alba Invest</a>
+      </div>
+
       <div class="text-center mb-30">
         <div style="width: 80px; height: 80px; background: linear-gradient(135deg, var(--primary), var(--primary-dark)); border-radius: 50%; display: flex; align-items: center; justify-content: center; margin: 0 auto 20px;">
           <i class="bi bi-key" style="font-size: 2rem; color: white;"></i>
         </div>
-        <h2>Esqueceu sua senha?</h2>
-        <p class="text-muted">Sem problemas! Digite seu e-mail e enviaremos um link para redefinir sua senha.</p>
+        <h1 class="auth-title">Recuperar Senha</h1>
+        <p class="auth-subtitle">Digite seu e-mail e enviaremos um link para redefinir sua senha.</p>
       </div>
 
       <form action="recuperar-senha-enviado.html" method="get">
@@ -35,16 +36,27 @@
           <i class="bi bi-arrow-left"></i> Voltar ao login
         </a>
       </div>
-    </div>
 
-    <div class="text-center mt-20">
-      <p class="text-muted" style="font-size: 0.875rem;">
-        Nao recebeu o e-mail? Verifique sua pasta de spam ou
-        <a href="#" style="color: var(--primary);">entre em contato</a>
-      </p>
+      <div class="text-center mt-20">
+        <p class="text-muted" style="font-size: 0.875rem;">
+          Nao recebeu o e-mail? Verifique sua pasta de spam ou
+          <a href="fale-conosco.html" style="color: var(--primary);">entre em contato</a>
+        </p>
+      </div>
+
+      <!-- CVM Disclaimer -->
+      <div class="auth-disclaimer">
+        <p><i class="bi bi-shield-check"></i> Plataforma autorizada CVM - RCVM 88/2022</p>
+        <p class="text-muted" style="font-size: 0.7rem;">Investimentos envolvem riscos. Leia o material da oferta antes de investir.</p>
+      </div>
     </div>
   </div>
 
   <script src="../js/app.js"></script>
+  <a href="https://wa.me/5511738090855" target="_blank" class="floating-help-btn whatsapp" title="Atendimento WhatsApp">
+    <i class="bi bi-whatsapp"></i>
+    <span>Atendimento</span>
+  </a>
+
 </body>
 </html>
