--- a/pages/redefinir-senha.html
+++ b/pages/redefinir-senha.html
@@ -8,17 +8,18 @@
   <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-  <div class="auth-container">
-    <div class="auth-header">
-      <a href="../index.html" class="logo">CrowdInvest</a>
-    </div>
+  <div class="auth-page">
     <div class="auth-box">
+      <div class="auth-logo">
+        <a href="../index.html" class="logo">Alba Invest</a>
+      </div>
+
       <div class="text-center mb-30">
         <div style="width: 80px; height: 80px; background: linear-gradient(135deg, var(--primary), var(--primary-dark)); border-radius: 50%; display: flex; align-items: center; justify-content: center; margin: 0 auto 20px;">
           <i class="bi bi-shield-lock" style="font-size: 2rem; color: white;"></i>
         </div>
-        <h2>Criar Nova Senha</h2>
-        <p class="text-muted">Digite sua nova senha abaixo.</p>
+        <h1 class="auth-title">Criar Nova Senha</h1>
+        <p class="auth-subtitle">Digite sua nova senha abaixo.</p>
       </div>
 
       <form action="redefinir-senha-sucesso.html" method="get">
@@ -73,6 +74,12 @@
           <i class="bi bi-arrow-left"></i> Voltar ao login
         </a>
       </div>
+
+      <!-- CVM Disclaimer -->
+      <div class="auth-disclaimer">
+        <p><i class="bi bi-shield-check"></i> Plataforma autorizada CVM - RCVM 88/2022</p>
+        <p class="text-muted" style="font-size: 0.7rem;">Investimentos envolvem riscos. Leia o material da oferta antes de investir.</p>
+      </div>
     </div>
   </div>
 
@@ -92,5 +99,10 @@
       }
     }
   </script>
+  <a href="https://wa.me/5511738090855" target="_blank" class="floating-help-btn whatsapp" title="Atendimento WhatsApp">
+    <i class="bi bi-whatsapp"></i>
+    <span>Atendimento</span>
+  </a>
+
 </body>
 </html>
